--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "private": true,
   "dependencies": {
     "autoprefixer": "^7.2.5",
+    "axios": "^0.17.1",
     "babel-core": "^6.26.0",
-    "babel-loader": "7.x",
+    "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "coffee-loader": "^0.9.0",
@@ -20,10 +21,10 @@
     "postcss-loader": "^2.0.10",
     "postcss-smart-import": "^0.7.6",
     "precss": "^2.0.0",
-    "prop-types": "^15.5.8",
+    "prop-types": "^15.6.0",
     "rails-erb-loader": "^5.2.1",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
     "webpack": "^3.10.0",
@@ -31,6 +32,8 @@
     "webpack-merge": "^4.1.1"
   },
   "devDependencies": {
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
     "webpack-dev-server": "^2.11.0"
   }
 }
